creation du répertoire default et lien symbolique vers lui

--- a/default/index.html
+++ b/default/index.html
@@ -8,6 +8,8 @@
 	
 	}
 	</style>
+	
+	<script>window.BLOG_ROOT="../../js-stuff/"</script>
 	<script type="module" src="../minilib/minilib.js"></script>
 </head>
 <body>
